--- a/Main.html
+++ b/Main.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Caroline's Resume</title>
+<title>Caroline Resume</title>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 </head>
 <body>
-<h1>Caroline Thierry's Resume </h1>
+<h1>Caroline Thierry Resume </h1>
 <p><ul>
 	<li><a href=#>About Me</a></li>
 	<li><a href="Contact.html">Contact Me!</a></li>
@@ -15,10 +15,10 @@
 <br>
 <br>
 <h2>Objective</h2>
-<p>I hope to be involved in the elimination of plastics from our food systems.</p>
+<p>I dream to be involved in the elimination of plastics and the betterment of our medical system. I believe that many of our issues are interconnected and in order to address one issue - such as plastics - we need to address the larger issue of our food system. By creating a more sustainable and diverse food system we can address food waste, storage, and ultimately human health.</p>
 <h2>Work Experience</h2>
 <h3>Intern at PG&E</h3>
-<p>I work at Pacific Gas and Electric in the Standards and Qualifications department. I have been responsible for employee fatality investigation, tracking out-of-compliance variances, building a flaring excel calculator, and revising soil contamination and remediation standard and procedures.</p>
+<p>I work at Pacific Gas and Electric in the Standards and Qualifications department. I have been responsible for an employee fatality investigation, tracking out-of-compliance variances, building a flaring excel calculator, and revising soil contamination and remediation standard and procedures.</p>
 <h3>Extern at Tradeshift</h3>
 <p>I built a web-based business-to-business application using HTML, CSS, and Javascript.</p>
 <h3>Intern at PG&E</h3>
