--- a/Main.html
+++ b/Main.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Caroline Resume</title>
+<title>Caroline's Resume</title>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 </head>
 <body>
-<h1>Caroline Thierry Resume </h1>
+<h1>Caroline Thierry's Resume </h1>
 <p><ul>
 	<li><a href=#>About Me</a></li>
 	<li><a href="Contact.html">Contact Me!</a></li>
