--- a/Main.html
+++ b/Main.html
@@ -15,8 +15,7 @@
 <br>
 <br>
 <h2>Objective</h2>
-<p>I dream to be involved in the elimination of plastics and the betterment of our medical system. I believe that many of our issues are interconnected and in order to address one issue - such as plastics - we need to address the larger issue of our food system. By creating a more sustainable and diverse food system we can address food waste, storage, and ultimately human health.</p>
-<p> Help me make this work</p>
+<p>I dream to be involved in the elimination of plastics and the betterment of our medical system. I believe that many of our issues are interconnected and in order to address one issue - such as plastics - we need to address the larger issue of our food system. By creating a more sustainable and diverse food system we can address food waste, storage, and ultimately human health.</p><p>
 <h2>Work Experience</h2>
 <h3>Intern at PG&E</h3>
 <p>I work at Pacific Gas and Electric in the Standards and Qualifications department. I have been responsible for an employee fatality investigation, tracking out-of-compliance variances, building a flaring excel calculator, and revising soil contamination and remediation standard and procedures.</p>
